<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.menu.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/setting_color"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/rubik_medium"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/black_seventy"
            android:drawablePadding="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_notification"
            app:drawableEndCompat="@drawable/ic_next_icon" />

        <View
            android:id="@+id/notification_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_twenty"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@id/fon"
            app:layout_constraintTop_toBottomOf="@id/notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/fon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fon"
            android:textColor="@color/black_seventy"
            android:drawablePadding="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_view"
            app:drawableStartCompat="@drawable/ic_fon_background"
            app:drawableEndCompat="@drawable/ic_next_icon" />

        <View
            android:id="@+id/fon_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_twenty"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/fon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="@color/black_seventy"
            android:drawablePadding="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fon_view"
            app:drawableStartCompat="@drawable/ic_theme_mode"
            app:drawableEndCompat="@drawable/ic_next_icon" />

        <View
            android:id="@+id/theme_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_twenty"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textColor="@color/black_seventy"
            android:drawablePadding="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theme_view"
            app:drawableStartCompat="@drawable/ic_star_us"
            app:drawableEndCompat="@drawable/ic_next_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>